# MEPhI_lab3

./: CMakeLists.txt  Doxyfile  README.md  main.cpp
html/: annotated.html  annotated_dup.js  arr__dialog_8hpp_source.html  classAbstractIndexed-members.html  classAbstractIndexed.html  classAbstractIndexed.js  classAbstractMemoryUnit-members.html  classAbstractMemoryUnit.html  classAbstractMemoryUnit.js  classAbstractNamed-members.html  classAbstractNamed.html  classAbstractNamed.js  classAbstractShared-members.html  classAbstractShared.html  classAbstractShared.js  classAbstractUnit-members.html  classAbstractUnit.html  classAbstractUnit.js  classArrDialog-members.html  classArrDialog.html  classArray-members.html  classArray.html  classArray.js  classByte-members.html  classByte.html  classByte.js  classController-members.html  classController.html  classController.js  classCreateOwnUnitDialog-members.html  classCreateOwnUnitDialog.html  classCreateProgramDialog-members.html  classCreateProgramDialog.html  classCreateRefDialog-members.html  classCreateRefDialog.html  classCreateSharedDialog-members.html  classCreateSharedDialog.html  classDoubleDefineError-members.html  classDoubleDefineError.html  classDoubleFreeError-members.html  (+237 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_e.js  classes_f.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+14 more)
include/: CMakeLists.txt  controller.hpp  errors.hpp  table.hpp
include/dialogs/: arr_dialog.hpp  create_own_unit_dialog.hpp  create_program_dialog.hpp  create_ref_dialog.hpp  create_shared_dialog.hpp  grant_shared_dialog.hpp  input_index_dialog.hpp  list_shared_dialog.hpp  main_window.hpp  program_dialog.hpp  program_errors_dialog.hpp  read_index_dialog.hpp  var_dialog.hpp  write_data_dialog.hpp
include/model/: CMakeLists.txt  repository.hpp  service.hpp
include/model/entity/: program.hpp  unit.hpp
include/ui/: arr_dialog.ui  create_own_unit_dialog.ui  create_program_dialog.ui  create_ref_dialog.ui  create_shared_dialog.ui  grant_shared_dialog.ui  input_index_dialog.ui  list_shared_dialog.ui  main_window.ui  program_dialog.ui  program_errors_dialog.ui  read_index_dialog.ui  var_dialog.ui  write_data_dialog.ui
latex/: annotated.tex  arr__dialog_8hpp_source.tex  classAbstractIndexed.eps  classAbstractIndexed.tex  classAbstractMemoryUnit.eps  classAbstractMemoryUnit.tex  classAbstractNamed.eps  classAbstractNamed.tex  classAbstractShared.eps  classAbstractShared.tex  classAbstractUnit.eps  classAbstractUnit.tex  classArrDialog.eps  classArrDialog.tex  classArray.eps  classArray.tex  classByte.tex  classController.eps  classController.tex  classCreateOwnUnitDialog.eps  classCreateOwnUnitDialog.tex  classCreateProgramDialog.eps  classCreateProgramDialog.tex  classCreateRefDialog.eps  classCreateRefDialog.tex  classCreateSharedDialog.eps  classCreateSharedDialog.tex  classDoubleDefineError.eps  classDoubleDefineError.tex  classDoubleFreeError.eps  classDoubleFreeError.tex  classGrantSharedDialog.eps  classGrantSharedDialog.tex  classGraphicView.eps  classGraphicView.tex  classIController.eps  classIController.tex  classIIndexed.eps  classIIndexed.tex  classIIndexedService.eps  (+112 more)
loader/: CMakeLists.txt  loader.cpp  loader.hpp
src/: CMakeLists.txt
src/controller/: CMakeLists.txt  controller.cpp
src/model/: CMakeLists.txt
src/model/entity/: CMakeLists.txt
src/model/entity/program/: CMakeLists.txt  program.cpp
src/model/entity/unit/: CMakeLists.txt  unit.cpp
src/model/repository/: CMakeLists.txt  repository.cpp
src/model/service/: CMakeLists.txt  service.cpp
src/view/: CMakeLists.txt  view.cpp  view.hpp
src/view/dialogs/: CMakeLists.txt
src/view/dialogs/arr_dialog/: CMakeLists.txt  arr_dialog.cpp
src/view/dialogs/create_own_unit_dialog/: CMakeLists.txt  create_own_unit_dialog.cpp
src/view/dialogs/create_program_dialog/: CMakeLists.txt  create_program_dialog.cpp
src/view/dialogs/create_ref_dialog/: CMakeLists.txt  create_ref_dialog.cpp
src/view/dialogs/create_shared_dialog/: CMakeLists.txt  create_shared_dialog.cpp
src/view/dialogs/grant_shared_dialog/: CMakeLists.txt  grant_shared_dialog.cpp
src/view/dialogs/input_index_dialog/: CMakeLists.txt  input_index_dialog.cpp
src/view/dialogs/list_shared_dialog/: CMakeLists.txt  list_shared_dialog.cpp
src/view/dialogs/main_window/: CMakeLists.txt  main_window.cpp
src/view/dialogs/program_dialog/: CMakeLists.txt  program_dialog.cpp
src/view/dialogs/program_errors_dialog/: CMakeLists.txt  program_errors_dialog.cpp
src/view/dialogs/read_index_dialog/: CMakeLists.txt  read_index_dialog.cpp
src/view/dialogs/var_dialog/: CMakeLists.txt  var_dialog.cpp
src/view/dialogs/write_data_dialog/: CMakeLists.txt  write_data_dialog.cpp
tests/: CMakeLists.txt  tests.cpp
timing/: CMakeLists.txt  timing.cpp
