cmake_minimum_required(VERSION 3.20)
project(main VERSION 1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_compile_options(-Wall -Wextra -Wpedantic -ggdb -fsanitize=leak --coverage)
add_link_options(--coverage)
add_subdirectory(include)
add_subdirectory(src)
add_subdirectory(loader)
add_subdirectory(tests)
add_subdirectory(timing)
include_directories(main PRIVATE include)
add_executable(main main.cpp)
target_link_libraries(main PRIVATE loader)
