cmake_minimum_required(VERSION 3.20)
find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
qt_standard_project_setup()
add_library(view SHARED "${CMAKE_SOURCE_DIR}/include/view.hpp" view.cpp)
add_subdirectory(dialogs)
target_include_directories(view PRIVATE "${CMAKE_SOURCE_DIR}/include")
target_link_libraries(view PRIVATE main_window controller Qt6::Widgets)