add_subdirectory(arr_dialog)
add_subdirectory(create_own_unit_dialog)
add_subdirectory(create_program_dialog)
add_subdirectory(create_ref_dialog)
add_subdirectory(create_shared_dialog)
add_subdirectory(grant_shared_dialog)
add_subdirectory(input_index_dialog)
add_subdirectory(list_shared_dialog)
add_subdirectory(main_window)
add_subdirectory(program_dialog)
add_subdirectory(program_errors_dialog)
add_subdirectory(read_index_dialog)
add_subdirectory(var_dialog)
add_subdirectory(write_data_dialog)